# drf-api-permissions

./: db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
drf_api_permissions_postgre_project/: asgi.py  settings.py  urls.py  wsgi.py
food/: tests.py  urls.py  views.py
food/migrations/: 0001_initial.py
